# medre-bench

./: .gitignore  =0.1.0  =0.9.0  =1.7.0  =3.6.0  =4.1.0  =7.4.0  Makefile  README.md  pyproject.toml
configs/: deepspeed_zero2.json  deepspeed_zero3.json  defaults.yaml
configs/datasets/: biored.yaml  chemprot.yaml  ddi.yaml  drugprot.yaml  gad.yaml
configs/experiments/: pubmedbert_chemprot.yaml  sweep_all.yaml
configs/models/: bert_base.yaml  biobert.yaml  clinicalbert.yaml  pubmedbert.yaml  scibert.yaml
notebooks/: BioRedRElations.csv  ChemProtRelations.csv  dataset_exploration.ipynb  results_analysis.ipynb  tomek_bc5cdr_validation.ipynb  training_dynamics.ipynb
notebooks/.ipynb_checkpoints/: results_analysis-checkpoint.ipynb  tomek_bc5cdr_validation-checkpoint.ipynb
scripts/: aggregate_stats.py  analyze_seq_lengths.py  compare_aggregate_vs_baselines.py  compare_results.py  distributed_train.py  export_results.py  generate_slurm_jobs.py  run_experiment.py  run_sweep.py
slurm_jobs/small/: biobert__ddi__seed42.sh  submit_all.sh
src/medre_bench/: __init__.py  cli.py  registry.py
src/medre_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/medre_bench/config/: __init__.py  loader.py  schema.py
src/medre_bench/datasets/: __init__.py  aggregate.py  base.py  bc5cdr.py  biored.py  chem_dis_gene.py  chemprot.py  ddi.py  drugprot.py  euadr.py  gad.py  preprocessing.py
src/medre_bench/evaluation/: aggregate_eval.py  analysis.py  (+1 more)
tests/: conftest.py  test_config.py  test_datasets.py  test_models.py  test_registry.py
(+30 files in other folders)
