[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medre-bench"
version = "0.1.0"
description = "Benchmarking framework for medical relation extraction with BERT models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.36.0,<5.0.0",
    "datasets>=2.16.0,<3.0.0",
    "accelerate>=0.25.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.5.0",
    "typer[all]>=0.9.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
medre-bench = "medre_bench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
